# job-scheduler-experiment

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  todo.md
dev/: README.md  description.md  project_idea.md  setup.md  todo.md  usage.md
dev/archive/: README.md  draft.sh
job_scheduler_experiment/: add_job_client.py  job_manager_client.py  sample_job.py  scheduler.py  scheduler_app.py  todo.md
job_scheduler_experiment/coolify_job/: idea.md
job_scheduler_experiment/coolify_scheduler/: idea.md
job_scheduler_experiment/local_plist/: plist.env  setup_plist_job.py
job_scheduler_experiment/local_runner/: runner_job.env
src/: README.md  app.py  models.py  scheduler.py  todo.md
